# csc615m-bag

./: .gitignore  README.md  main.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
