[project]
name = "csc615m-bag"
version = "0.1.0"
description = "A parallel sentence pair generator for Tagalog, Cebuano and Hiligaynon using the BibliaMundi dataset"
authors = [
    {name = "Joshua Armaine Gilo",email = "joshua_gilo@dlsu.edu.ph"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.3,<5.0.0)",
    "jupyterlab-git (>=0.51.1,<0.52.0)",
    "pymupdf4llm (>=0.0.24,<0.0.25)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
